--- a/package.json
+++ b/package.json
@@ -8,12 +8,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.10",
+    "gray-matter": "^4.0.3",
+    "markdown-it": "^12.3.2",
+    "next": "^12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.2",
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.39",
+    "autoprefixer": "^10.4.2",
     "eslint": "8.9.0",
-    "eslint-config-next": "12.0.10"
+    "eslint-config-next": "12.0.10",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.22",
+    "typescript": "^4.6.2"
   }
 }
