--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tabler/icons": "^1.63.0",
     "gray-matter": "^4.0.3",
     "markdown-it": "^12.3.2",
     "next": "^12.1.0",
