--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
   },
   "dependencies": {
     "@tabler/icons": "^1.63.0",
+    "date-fns": "^2.28.0",
     "gray-matter": "^4.0.3",
     "markdown-it": "^12.3.2",
+    "motion": "^10.6.2",
     "next": "^12.1.0",
+    "node-fetch": "^2.6.7",
+    "querystring": "^0.2.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.2",
